fixed logo container height cropping issue

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -38,7 +38,7 @@ a:hover {
 #logo {
   float: left;
   width: 7em;
-  height: 5em;
+  height: 6em;
 }
 h1, h2 {
   font-size: 1em;
